# eFrecuencyNode

./: .gitmodules  CMakeLists.txt
components/eAuth/: CMakeLists.txt
components/eGenerator/: CMakeLists.txt  eGenerator.c
components/eGenerator/include/: eGenerator.h
components/eStore/: eStore.c
components/eStore/include/: eStore.h
components/eWifi/: CMakeLists.txt  eAuth.c  eWifi.c  uri_handlers.c
components/eWifi/include/: eAuth.h  eWifi.h  uri_handlers.h
components/eWifi/src/: generator.html  home.html  login.html  styles.css
components/eWifi/src/css/: generator_styles.css  main_styles.css
components/eWifi/src/js/: generator_index.js
main/: CMakeLists.txt  main.c  uri_handlers.c
main/src/: home.html  login.html
main/src/css/: login_styles.css
main/src/js/: generator_index.js
